--- a/stable/k8s-service/Chart.yaml
+++ b/stable/k8s-service/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 description: A Helm chart to package your application container for Kubernetes
 home: https://github.com/gruntwork-io/helm-kubernetes-services
 maintainers:
-- email: chago19911@gmail.com
-  name: chago1991
+- email: platform-omega@space.ge
+  name: Platform Omege
 name: k8s-service
 version: 0.0.23
