--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Publish Helm charts
+        env:
+          GIT_DISCOVERY_ACROSS_FILESYSTEM: 1
         uses: stefanprodan/helm-gh-pages@v1.4.1
         with:
           token: ${{ secrets.CR_TOKEN }}
