--- a/stable/k8s-service/templates/ingress.yaml
+++ b/stable/k8s-service/templates/ingress.yaml
@@ -6,11 +6,11 @@ metadata:
   annotations: {{ toYaml .Values.ingress.annotations | nindent 4 }}
 spec:
   rules:
-    - host: {{ .Values.ingress.hosts.host }}
+    - host: {{ index .Values.ingress.hosts 0 | quote }}
       http:
         paths:
-          - path: {{ .Values.ingress.hosts.paths.path }}
-            pathType: {{ .Values.ingress.hosts.paths.pathType }}
+          - path: {{ .Values.ingress.hosts[0].paths.path }}
+            pathType: {{ .Values.ingress.hosts[0].paths.pathType }}
             backend:
               service:
                 name: {{ .Values.service.name }}
@@ -19,5 +19,5 @@ spec:
   tls:
     - secretName: {{ .Values.ingress.tls.secretName }}
       hosts:
-        - {{ .Values.ingress.hosts.host }}
+        - {{ index .Values.ingress.hosts 0 | quote }}
 {{- end }}
