--- a/stable/k8s-service/templates/ingress.yaml
+++ b/stable/k8s-service/templates/ingress.yaml
@@ -3,14 +3,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}
-  annotations: {{ toYaml .Values.ingress.annotations | nindent 4 }}
+  annotations: 
+{{ toYaml .Values.ingress.annotations | indent 4 }}
 spec:
   rules:
-    - host: {{ index .Values.ingress.hosts 0 | quote }}
+    - host: {{ .Values.ingress.hosts.host }}
       http:
         paths:
-          - path: {{ .Values.ingress.hosts[0].paths.path }}
-            pathType: {{ .Values.ingress.hosts[0].paths.pathType }}
+          - path: {{ .Values.ingress.hosts.paths.path }}
+            pathType: {{ .Values.ingress.hosts.paths.pathType }}
             backend:
               service:
                 name: {{ .Values.service.name }}
@@ -19,5 +20,5 @@ spec:
   tls:
     - secretName: {{ .Values.ingress.tls.secretName }}
       hosts:
-        - {{ index .Values.ingress.hosts 0 | quote }}
+        - {{ .Values.ingress.hosts.host }}
 {{- end }}
