--- a/stable/k8s-service/templates/service.yaml
+++ b/stable/k8s-service/templates/service.yaml
@@ -34,4 +34,18 @@ spec:
     app.kubernetes.io/name: {{ include "k8s-service.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
   {{- if .Values.service.externalTrafficPolicy }}
-  externalTrafficPolicy: {{ .Values.service
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
+  {{- end}}
+  {{- if .Values.service.internalTrafficPolicy }}
+  internalTrafficPolicy: {{ .Values.service.internalTrafficPolicy }}
+  {{- end}}
+  {{- if .Values.service.sessionAffinity }}
+  sessionAffinity: {{ .Values.service.sessionAffinity }}
+  {{- if .Values.service.sessionAffinityConfig }}
+  {{- with .Values.service.sessionAffinityConfig }}
+  sessionAffinityConfig:
+{{ toYaml . | indent 4 }}
+  {{- end}}
+  {{- end}}
+  {{- end}}
+{{- end }}
