--- a/stable/k8s-api/Chart.yaml
+++ b/stable/k8s-api/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: api
+name: k8s-api
 description: A Fastapi Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
