--- a/stable/k8s-service/.helmignore
+++ b/stable/k8s-service/.helmignore
@@ -1,6 +1,6 @@
 # Patterns to ignore when building packages.
 # This supports shell glob matching, relative path matching, and
-## negation (prefixed with !). Only one pattern per line.
+# negation (prefixed with !). Only one pattern per line.
 .DS_Store
 # Common VCS dirs
 .git/
@@ -14,10 +14,8 @@
 *.swp
 *.bak
 *.tmp
-*.orig
 *~
 # Various IDEs
 .project
 .idea/
 *.tmproj
-.vscode/
