--- a/stable/k8s-service/templates/horizontalpodautoscaler.yaml
+++ b/stable/k8s-service/templates/horizontalpodautoscaler.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.horizontalPodAutoscaler.enabled }}
-apiVersion: {{ .Values.horizontalPodAutoscaler.version }}
+apiVersion: {{ include "gruntwork.horizontalPodAutoscaler.apiVersion" . }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "k8s-service.fullname" . }}
@@ -12,6 +12,14 @@ spec:
   minReplicas: {{ .Values.horizontalPodAutoscaler.minReplicas }}
   maxReplicas: {{ .Values.horizontalPodAutoscaler.maxReplicas }}
   metrics:
+  {{ if .Values.horizontalPodAutoscaler.avgCpuUtilization }}
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.horizontalPodAutoscaler.avgCpuUtilization }}
+  {{- end }}
   {{ if .Values.horizontalPodAutoscaler.avgMemoryUtilization }}
     - type: Resource
       resource:
@@ -20,12 +28,8 @@ spec:
           type: Utilization
           averageUtilization: {{ .Values.horizontalPodAutoscaler.avgMemoryUtilization }}
   {{- end }}
-  {{ if .Values.horizontalPodAutoscaler.avgCpuUtilization }}
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: {{ .Values.horizontalPodAutoscaler.avgCpuUtilization }}
+  {{- if .Values.horizontalPodAutoscaler.behavior }}
+  behavior:
+{{ tpl (toYaml .Values.horizontalPodAutoscaler.behavior) $ | indent 4 }}
   {{- end }}
 {{- end }}
