--- a/stable/k8s-service/values.yaml
+++ b/stable/k8s-service/values.yaml
@@ -27,10 +27,10 @@
 #
 # EXAMPLE:
 #
-# containerImage:
-#   repository: nginx
-#   tag: stable
-#   pullPolicy: IfNotPresent
+containerImage:
+  repository: nginx
+  tag: stable
+  pullPolicy: IfNotPresent
 
 # applicationName is a string that names the application. This is used to label the pod and to name the main application
 # container in the pod spec. The label is keyed under "gruntwork.io/app-name"
