--- a/stable/jellyfin-helm/templates/deployment.yaml
+++ b/stable/jellyfin-helm/templates/deployment.yaml
@@ -38,12 +38,12 @@ spec:
               hostPort: 1900
               protocol: UDP
           {{- end }}
-          livenessProbe:
-            tcpSocket:
-              port: http
-          readinessProbe:
-            tcpSocket:
-              port: http
+          # livenessProbe:
+          #   tcpSocket:
+          #     port: http
+          # readinessProbe:
+          #   tcpSocket:
+          #     port: http
           volumeMounts:
             - mountPath: /config
               name: config
