reconfigure jellyfin helm chart and change version to 0.10.0

--- a/stable/jellyfin-helm/values.yaml
+++ b/stable/jellyfin-helm/values.yaml
@@ -110,9 +110,10 @@ resources: {}
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 10
   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  targetMemoryUtilizationPercentage: 80
+
 nodeSelector: {}
 
 tolerations: []
