--- a/stable/jellyfin-helm/templates/deployment.yaml
+++ b/stable/jellyfin-helm/templates/deployment.yaml
@@ -38,6 +38,8 @@ spec:
               hostPort: 1900
               protocol: UDP
           {{- end }}
+          env: 
+            {{- toYaml .Values.envVariables | nindent 12 }}
           volumeMounts:
           {{- if .Values.persistence.config.enabled }}
             - mountPath: /config
