--- a/stable/filesbrowser-helm/values.yaml
+++ b/stable/filesbrowser-helm/values.yaml
@@ -76,7 +76,7 @@ persistence:
     # subPath: some-subpath
     accessMode: ReadWriteOnce
     size: 1Gi
-  media:
+  database:
     enabled: false
     ## Directory where media is persisted
     ## If defined, storageClassName: <storageClass>
