--- a/stable/filesbrowser-helm/templates/deployment.yaml
+++ b/stable/filesbrowser-helm/templates/deployment.yaml
@@ -48,11 +48,11 @@ spec:
               subPath: {{ .Values.persistence.config.subPath }}
               {{- end }}
           {{- end }}
-          {{- if .Values.persistence.media.enabled }}
+          {{- if .Values.persistence.database.enabled }}
             - mountPath: /database
               name: database
-              {{- if .Values.persistence.media.subPath }}
-              subPath: {{ .Values.persistence.media.subPath }}
+              {{- if .Values.persistence.database.subPath }}
+              subPath: {{ .Values.persistence.database.subPath }}
               {{- end }}
           {{- end }}
           {{- range .Values.persistence.extraExistingClaimMounts }}
@@ -74,12 +74,12 @@ spec:
       - name: config
         emptyDir: {}
       {{- end }}
-      {{- if .Values.persistence.media.enabled }}
-      - name: media
+      {{- if .Values.persistence.database.enabled }}
+      - name: database
         persistentVolumeClaim:
-          claimName: {{ if .Values.persistence.media.existingClaim }}{{ .Values.persistence.media.existingClaim }}{{- else }}{{ template "filesbrowser.fullname" . }}-media{{- end }}
+          claimName: {{ if .Values.persistence.database.existingClaim }}{{ .Values.persistence.database.existingClaim }}{{- else }}{{ template "filesbrowser.fullname" . }}-database{{- end }}
       {{- else }}
-      - name: media
+      - name: database
         emptyDir: {}
       {{- end }}
       {{- range .Values.persistence.extraExistingClaimMounts }}
