--- a/stable/nfs-server/templates/serviceaccount.yaml
+++ b/stable/nfs-server/templates/serviceaccount.yaml
@@ -2,12 +2,11 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "demo-chart-test.serviceAccountName" . }}
+  name: {{ include "nfs-server.serviceAccountName" . }}
   labels:
-    {{- include "demo-chart-test.labels" . | nindent 4 }}
+    {{- include "nfs-server.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{- end }}
