--- a/stable/nfs-server/templates/deployment.yaml
+++ b/stable/nfs-server/templates/deployment.yaml
@@ -33,8 +33,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            {{ toYaml .Values.service.ports | nindent 12 }}
+          ports: 
+            {{- range .Values.containerPorts }}
+            - name: {{ .name }}
+              containerPort: {{ .port }}
+              protocol: {{ .protocol }}
+            {{- end }}
           env: 
             {{ toYaml .Values.env | nindent 12 }}
           volumeMounts: 
