add new chart nfs-server

--- a/stable/nfs-server/templates/deployment.yaml
+++ b/stable/nfs-server/templates/deployment.yaml
@@ -35,8 +35,8 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports: 
             {{- range .Values.containerPorts }}
-            - name: {{ .name }}
-              containerPort: {{ .port }}
+            - containerPort: {{ .port }}
+              name: {{ .name }}
               protocol: {{ .protocol }}
             {{- end }}
           env: 
