--- a/stable/nfs-server/values.yaml
+++ b/stable/nfs-server/values.yaml
@@ -43,7 +43,7 @@ volumes: []
   # - name: nfs-vol
   #   hostPath:
   #     path: "/nfs-vol"
-  #     type: emptyDir
+  #     emptyDir: {}
 
 env:
   # - name: SHARED_DIRECTORY
