add new chart nfs-server 0.6.0

--- a/stable/nfs-server/values.yaml
+++ b/stable/nfs-server/values.yaml
@@ -43,7 +43,7 @@ volumes: []
   # - name: nfs-vol
   #   hostPath:
   #     path: "/nfs-vol"
-  #     emptyDir: {}
+  #     type: Directory
 
 env:
   # - name: SHARED_DIRECTORY
