--- a/stable/nfs-server/templates/deployment.yaml
+++ b/stable/nfs-server/templates/deployment.yaml
@@ -39,12 +39,9 @@ spec:
               name: {{ .name }}
               protocol: {{ .protocol }}
             {{- end }}
-          env: 
-            {{ toYaml .Values.env | nindent 12 }}
-          volumeMounts: 
-            {{ toYaml .Values.volumeMounts | nindent 12 }}
-      volumes: 
-        {{ toYaml .Values.volumes | nindent 8 }}
+          env: {{ toYaml .Values.env | nindent 12 }}
+          volumeMounts: {{ toYaml .Values.volumeMounts | nindent 12 }}
+      volumes: {{ toYaml .Values.volumes | nindent 8 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
