--- a/stable/nfs-server/templates/service.yaml
+++ b/stable/nfs-server/templates/service.yaml
@@ -2,11 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "nfs-server.fullname" . }}
-  labels:
-    {{- include "nfs-server.labels" . | nindent 4 }}
+  labels:{{- include "nfs-server.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
-  selector:
-    {{- include "nfs-server.selectorLabels" . | nindent 4 }}
-  ports: 
-    {{ toYaml .Values.service.ports | nindent 4 }}
+  selector:{{- include "nfs-server.selectorLabels" . | nindent 4 }}
+  ports: {{ toYaml .Values.service.ports | nindent 4 }}
