--- a/stable/nfs-server/values.yaml
+++ b/stable/nfs-server/values.yaml
@@ -48,13 +48,15 @@ volumes: []
 env:
   # - name: SHARED_DIRECTORY
   #   value: "/exports"
-containerPorts:
-  - name: tcp-2049
-    port: 2049
-    protocol: TCP
-  - name: udp-111
-    port: 111
-    protocol: UDP
+
+
+# containerPorts:
+#   - name: tcp-2049
+#     port: 2049
+#     protocol: TCP
+#   - name: udp-111
+#     port: 111
+#     protocol: UDP
 
 service:
   type: ClusterIP
