--- a/stable/jellyfin/values.yaml
+++ b/stable/jellyfin/values.yaml
@@ -197,7 +197,7 @@ jellyfin:
   # - /dev/dri/renderD128
 
   # -- The list of volumes that will be mounted inside jellyfin pod, to `/media`.
-  mediaVolumes: 
+  mediaVolumes: []
   # - name: movies # this volume will be mounted into `/media/movies`
   #   readOnly: false # is this volume readonly ? (optional, default true)
   #   volumeSpec: # see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.26/#persistentvolumespec-v1-core
