--- a/stable/jellyfin/templates/statefulset.yaml
+++ b/stable/jellyfin/templates/statefulset.yaml
@@ -40,6 +40,8 @@ spec:
             - name: web
               containerPort: 8096
               protocol: TCP
+          env: 
+            {{- toYaml .Values.envVariables | nindent 12 }}
           livenessProbe:
             httpGet: &httpProbe
               port: web
