--- a/stable/jellyfin/values.yaml
+++ b/stable/jellyfin/values.yaml
@@ -1,4 +1,6 @@
 global:
+  # --- Replica counts
+  replicaCount: 1
   # -- Labels to apply to all resources.
   commonLabels: {}
   # -- Enable global debug mode
@@ -105,26 +107,26 @@ envVariables: []
   # - name: ANOTHER_ENV_VARIABLE
   #   value: "another_value"
 
-# -- Security context for the pod (https://kubernetes.io/docs/tasks/configure-pod-container/security-context/)
-podSecurityContext:
-  runAsGroup: 64710
-  runAsNonRoot: true
-  runAsUser: 64710
-  fsGroup: 64710
-  seccompProfile:
-    type: RuntimeDefault
+# # -- Security context for the pod (https://kubernetes.io/docs/tasks/configure-pod-container/security-context/)
+# podSecurityContext: []
+#   # runAsGroup: 64710
+#   # runAsNonRoot: true
+#   # runAsUser: 64710
+#   # fsGroup: 64710
+#   # seccompProfile:
+#   #   type: RuntimeDefault
 
-# -- Security context for the jellyfin container
-#    (https://kubernetes.io/docs/tasks/configure-pod-container/security-context/)
-containerSecurityContext:
-  allowPrivilegeEscalation: false
-  capabilities:
-    drop:
-      - ALL
-  readOnlyRootFilesystem: true
-  runAsGroup: 64710
-  runAsNonRoot: true
-  runAsUser: 64710
+# # -- Security context for the jellyfin container
+# #    (https://kubernetes.io/docs/tasks/configure-pod-container/security-context/)
+# containerSecurityContext: []
+#   # allowPrivilegeEscalation: false
+#   # capabilities:
+#   #   drop:
+#   #     - ALL
+#   # readOnlyRootFilesystem: true
+#   # runAsGroup: 64710
+#   # runAsNonRoot: true
+#   # runAsUser: 64710
 
 persistence:
   config:
