--- a/stable/emulatorjs/templates/statefulset.yaml
+++ b/stable/emulatorjs/templates/statefulset.yaml
@@ -36,7 +36,13 @@ spec:
           imagePullPolicy: {{ .Values.images.emulatorjs.pullPolicy }}
           ports:
             - name: web
-              containerPort: 8096
+              containerPort: 80
+              protocol: TCP
+            - name: rom
+              containerPort: 3000
+              protocol: TCP
+            - name: p2p
+              containerPort: 4001
               protocol: TCP
           env: 
             {{- toYaml .Values.envVariables | nindent 12 }}
