--- a/stable/emulatorjs/templates/ingress.yaml
+++ b/stable/emulatorjs/templates/ingress.yaml
@@ -42,7 +42,7 @@ spec:
     {{- if and .Values.ingress.tls (or (include "common.ingress.certManagerRequest" .Values.ingress.annotations)) }}
     - hosts:
         - {{ .Values.ingress.hostname }}
-      secretName: {{ printf "%s-tls" .Values.ingress.hostname }}
+      secretName: {{ .Values.ingress.secretName }}
     {{- end }}
     {{- if .Values.ingress.extraTls }}
     {{- include "common.tplvalues.render" (dict "value" .Values.ingress.extraTls "context" $) | nindent 4 }}
