add mikrotik exporter v3

--- a/stable/mikrotik-exporter/values.yaml
+++ b/stable/mikrotik-exporter/values.yaml
@@ -1,9 +1,9 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/akpw/mktxp:latest
+  repository: ghcr.io/akpw/mktxp
   pullPolicy: IfNotPresent
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
