--- a/stable/mikrotik-exporter/templates/deployment.yaml
+++ b/stable/mikrotik-exporter/templates/deployment.yaml
@@ -56,6 +56,7 @@ spec:
         volumeMounts:
           - name: {{ include "mikrotik-exporter.fullname" . }}
             mountPath: /mktxp_config
+            readOnly: false
       volumes:
         - name: {{ include "mikrotik-exporter.fullname" . }}
           secret:
