add new wersion jellyfin helm chart 0.14.0

--- a/stable/jellyfin-helm/templates/deployment.yaml
+++ b/stable/jellyfin-helm/templates/deployment.yaml
@@ -32,6 +32,12 @@ spec:
             - name: http
               containerPort: 8096
               protocol: TCP
+            - name: https
+              containerPort: 8920
+              protocol: TCP
+            - name: udp-dicovery
+              containerPort: 7359
+              protocol: UDP
           {{ if .Values.enableDLNA }}
             - name: dlna
               containerPort: 1900
